--- a/src/app.module.scss
+++ b/src/app.module.scss
@@ -1,41 +1,44 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,regular,italic,500,500italic,700,700italic,900,900italic);
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:300,regular,500,600,700,800,300italic,italic,500italic,600italic,700italic,800italic);
-body {
-}
-.wrapper {
-  margin: 0 auto;
-  width: 100%;
-  height: 100%;
-  max-height: 100vh;
-  max-width: 1280px;
-  .background {
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    width: auto;
-    height: 100%;
-    transform: translate(-50%, -50%);
-    min-width: 100%;
-    min-height: 100%;
-    object-fit: cover;
-  }
-  .header {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 0 auto;
-    width: 100%;
-    height: 100vh;
-    max-width: 1280px;
 
-    &Top {
+.wrapper {
+  overflow: hidden;
+  .topBlock {
+    position: relative;
+    width: 100vw;
+    height: 100vh;
+    &Bg {
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      width: auto;
+      height: 100%;
+      transform: translate(-50%, -50%);
+      min-width: 100%;
+      min-height: 100%;
+      object-fit: cover;
+    }
+    &Content {
       display: flex;
+      flex-direction: column;
       justify-content: space-between;
-      align-items: center;
-      padding: 20px 0;
+      position: absolute;
+      left: 50%;
+      transform: translateX(-50%);
+      max-width: 900px;
       width: 100%;
-      &Left {
+      height: 100%;
+      padding: 20px 0;
+      &Top {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        flex-wrap: wrap;
+        @media (max-width: 605px) {
+          flex-direction: column;
+          align-items: center;
+          justify-content: center;
+        }
         &__logo {
           cursor: pointer;
           &:hover {
@@ -44,13 +47,19 @@ body {
           }
           transition-duration: 0.3s;
         }
-      }
-      &Right {
         &MediaList {
+          @media (max-width: 605px) {
+            margin-top: 15px;
+          }
           &__media {
             padding: 0px 20px;
+            @media (max-width: 605px) {
+              padding: 0px 10px;
+            }
             &:last-child {
               padding: 0px;
+            }
+            &:first-child {
             }
             img {
               &:hover {
@@ -64,8 +73,15 @@ body {
       }
     }
     &Bottom {
+      @media (max-width: 497px) {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+      }
       position: absolute;
-      bottom: 0px;
+      bottom: 50px;
       right: 0px;
       width: 100%;
       height: 100%;
@@ -90,6 +106,9 @@ body {
         font-family: "Roboto";
         font-size: 50px;
         font-weight: bold;
+        @media (max-width: 497px) {
+          margin-left: 0px;
+        }
       }
       &__text {
         width: 120px;
@@ -107,35 +126,10 @@ body {
           transition-duration: 0.3s;
         }
         transition-duration: 0.3s;
+        @media (max-width: 497px) {
+          margin-left: 0px;
+        }
       }
     }
   }
-}
-
-.objectDisappears {
-  animation: fadeOut 0.5s ease-in-out infinite;
-  @keyframes fadeOut {
-    from {
-      opacity: 1; /* Начальное состояние: полностью непрозрачный */
-    }
-    to {
-      opacity: 0; /* Конечное состояние: полностью прозрачный */
-    }
-  }
-}
-
-.objectAppears {
-  animation: fadeOut 0.5s ease-in-out infinite;
-  @keyframes fadeOut {
-    from {
-      opacity: 0; /* Начальное состояние: полностью непрозрачный */
-    }
-    to {
-      opacity: 1; /* Конечное состояние: полностью прозрачный */
-    }
-  }
-}
-
-.testBody {
-  margin-top: 900px;
 }
