Добавлен адаптивный блок с заполнением формы

--- a/src/app.module.scss
+++ b/src/app.module.scss
@@ -25,7 +25,7 @@
       position: absolute;
       left: 50%;
       transform: translateX(-50%);
-      max-width: 952px;
+      max-width: 1280px;
       width: 100%;
       height: 100%;
       padding: 20px 0;
@@ -133,10 +133,11 @@
     }
   }
   .aboutCity {
-    max-width: 952px;
+    max-width: 1280px;
     margin: 0 auto;
+    margin-bottom: 70px;
     &Textbox {
-      @media (max-width: 952px) {
+      @media (max-width: 1280px) {
         margin-left: 10px;
       }
       &__title {
@@ -169,26 +170,237 @@
         align-items: center;
         justify-content: space-between;
         flex-wrap: wrap;
-        @media (max-width: 952px) {
+        @media (max-width: 1280px) {
           margin: 50px 0px 12px 0px;
         }
         &__img {
           width: 46%;
           display: inline-block;
-          @media (max-width: 952px) {
+          @media (max-width: 1280px) {
             margin: 15px 0;
             width: 100vw;
           }
         }
-        @media (max-width: 952px) {
+        @media (max-width: 1280px) {
         }
       }
       &__img {
-        max-width: 952px;
-        width: 95%;
+        max-width: 1280px;
+        width: 72%;
         display: inline-block;
-        @media (max-width: 952px) {
+        @media (max-width: 1280px) {
           width: 100vw;
+        }
+      }
+    }
+  }
+  .blockWithForm {
+    margin: 0 auto;
+    margin-top: 50px;
+    background-color: black;
+    &Content {
+      margin: 0 auto;
+      max-width: 1280px;
+      &__startBg {
+        width: 100vw;
+        padding-bottom: 70px;
+      }
+      &__endBg {
+        width: 100vw;
+        padding-top: 70px;
+      }
+      &Textbox {
+        margin-top: 15px;
+        &Top {
+          display: flex;
+          align-items: center;
+          &__photo {
+            @media (max-width: 745px) {
+              width: 80px;
+            }
+          }
+          &__title {
+            margin-left: 32px;
+            font-family: "Open Sans";
+            font-weight: bold;
+            color: white;
+            font-size: 52px;
+            @media (max-width: 745px) {
+              font-size: 32px;
+            }
+          }
+        }
+        &__text {
+          padding-left: 5px;
+          max-width: 952px;
+          margin: 25px 0;
+          color: #ffffff;
+          font-size: 18px;
+          font-family: "Roboto";
+          line-height: 34px;
+          &Blue {
+            color: #52bedc;
+          }
+        }
+      }
+      &Contentbox {
+        display: flex;
+        width: 100%;
+        @media (max-width: 900px) {
+          flex-direction: column-reverse;
+          justify-content: center;
+          align-items: center;
+          height: 200%;
+        }
+        &WithForm {
+          @media (max-width: 900px) {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+          }
+          padding-left: 5px;
+          padding-right: 5px;
+          width: 50%;
+          &__input {
+            max-width: 460px;
+            width: 100%;
+            color: #ffffff;
+            font-size: 18px;
+            font-family: "Roboto";
+            padding: 13px 0;
+            background: black;
+            border-bottom: #777777 1px solid;
+
+            transition-duration: 0.3s;
+            &:hover {
+              transform: scale(1.01);
+              border-bottom: #fff 1px solid;
+              transition-duration: 0.3s;
+            }
+            @media (max-width: 900px) {
+              width: 95vw;
+            }
+          }
+
+          &File {
+            position: relative;
+            margin-top: 35px;
+            border: 1px dashed #777777;
+            max-width: 460px;
+            width: 100%;
+            height: 120px;
+            transition-duration: 0.3s;
+            @media (max-width: 900px) {
+              width: 95vw;
+            }
+            &:hover {
+              transform: scale(1.01);
+              transition-duration: 0.3s;
+            }
+            &__inputFile {
+              position: absolute;
+              top: 0;
+              width: 100%;
+              height: 120px;
+              opacity: 0;
+              z-index: 1;
+              cursor: pointer;
+            }
+            &Textbox {
+              display: flex;
+              flex-direction: column;
+              justify-content: center;
+              text-align: center;
+              width: 100%;
+              height: 100%;
+              z-index: 0;
+              color: #ffffff;
+              font-family: "Roboto";
+              &__textMain {
+                font-size: 18px;
+                text-decoration: underline;
+              }
+              &__text {
+                margin-top: 7px;
+                font-size: 12px;
+              }
+            }
+          }
+          &__button {
+            font-family: "Roboto";
+            font-size: 18px;
+            margin-top: 35px;
+            padding: 19px 50px;
+            background-color: #f8f200;
+            transition-duration: 0.3s;
+            font-weight: bold;
+            &:hover {
+              transform: scale(1.02);
+              transition-duration: 0.3s;
+            }
+          }
+          &Accept {
+            margin-top: 15px;
+            display: flex;
+            align-items: center;
+            width: 100vw;
+            @media (max-width: 900px) {
+              justify-content: center;
+            }
+            &__checkbox {
+              margin-right: 12px;
+            }
+            &__text {
+              font-family: "Roboto";
+              font-size: 12px;
+              color: white;
+            }
+          }
+        }
+        &WithPhoto {
+          padding-right: 5px;
+          width: 50%;
+          display: flex;
+          @media (max-width: 900px) {
+            margin-top: 100px;
+            margin-bottom: 100px;
+          }
+          &Block {
+            position: relative;
+            width: 50%;
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+
+            &__img {
+              width: 100%;
+              &:nth-child(2) {
+                position: absolute;
+                left: 50%;
+                transform: translate(-50%, 0);
+                z-index: 1;
+                width: 70%;
+                margin-left: 50px;
+                @media (max-width: 900px) {
+                  margin-left: 0px;
+                  width: 25vw;
+                }
+              }
+              &:nth-child(1) {
+                position: absolute;
+                left: 50%;
+                transform: translate(-50%, 0);
+                z-index: 1;
+                width: 110%;
+                @media (max-width: 900px) {
+                  width: 25vw;
+                }
+              }
+            }
+          }
         }
       }
     }
