Добавлен и адаптирован желтый блок

--- a/src/app.module.scss
+++ b/src/app.module.scss
@@ -405,4 +405,119 @@
       }
     }
   }
+  .yellowBlock {
+    margin-top: -1px;
+    padding: 70px 0;
+    background-color: #f8f200;
+    width: 100%;
+    &Content {
+      margin: 0 auto;
+      width: 100%;
+      max-width: 1280px;
+      display: flex;
+      align-items: center;
+      @media (max-width: 900px) {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        width: 100%;
+      }
+      &Left {
+        padding: 5px;
+        width: 50%;
+        &__main {
+          width: 95%;
+
+          cursor: pointer;
+          &:hover {
+            transform: scale(1.03);
+            transition-duration: 0.3s;
+          }
+          transition-duration: 0.3s;
+        }
+        &Companys {
+          margin-top: 26px;
+          display: flex;
+          justify-content: space-around;
+          align-items: center;
+          &__comp {
+            cursor: pointer;
+            &:hover {
+              transform: scale(1.03);
+              transition-duration: 0.3s;
+            }
+            transition-duration: 0.3s;
+            @media (max-width: 900px) {
+              width: 35vw;
+            }
+          }
+        }
+      }
+      &Right {
+        padding: 5px;
+        width: 50%;
+        @media (max-width: 900px) {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          justify-content: center;
+        }
+        &__title {
+          font-family: "Roboto";
+          font-size: 50px;
+          font-weight: bold;
+          line-height: 64px;
+          width: 100vw;
+          @media (max-width: 900px) {
+            text-align: center;
+          }
+        }
+        &__text {
+          margin: 25px 0;
+          font-size: 18px;
+          font-family: "Roboto";
+          max-width: 624px;
+          width: 100%;
+          @media (max-width: 900px) {
+            max-width: 100%;
+          }
+          line-height: 34px;
+          font-weight: bold;
+        }
+        &About {
+          display: flex;
+          justify-content: center;
+          flex-direction: column;
+          &Content {
+            display: flex;
+            align-items: center;
+            align-items: center;
+            &__img {
+              width: 30px;
+            }
+            &__text {
+              margin-left: 10px;
+              font-weight: bold;
+            }
+          }
+        }
+        &__button {
+          margin-top: 40px;
+          padding: 19px 50px;
+          font-family: "Roboto";
+          font-size: 18px;
+          font-weight: bold;
+          color: #f8f200;
+          background-color: black;
+
+          &:hover {
+            transform: scale(1.02);
+            transition-duration: 0.3s;
+          }
+          transition-duration: 0.3s;
+        }
+      }
+    }
+  }
 }
