--- a/src/app.module.scss
+++ b/src/app.module.scss
@@ -520,4 +520,101 @@
       }
     }
   }
+  .aboutBuy {
+    display: flex;
+    align-items: center;
+    background-color: black;
+    width: 100%;
+    @media (max-width: 900px) {
+      flex-direction: column;
+    }
+    &Left {
+      width: 50%;
+      &__bg {
+        width: 100%;
+        @media (max-width: 900px) {
+          width: 100vw;
+          position: relative;
+          left: 0px;
+          transform: translate(-25%, 0);
+        }
+      }
+    }
+    &Right {
+      padding: 5px;
+      width: 50%;
+      border: 1px solid #000;
+      background-color: black;
+      @media (max-width: 900px) {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+      }
+      &__title {
+        font-family: "Roboto";
+        font-size: 50px;
+        font-weight: bold;
+        line-height: 64px;
+        color: white;
+        max-width: 500px;
+        @media (max-width: 900px) {
+          margin-top: 20px;
+        }
+      }
+      &__listTitle {
+        color: #52bedc;
+        font-size: 18px;
+        font-weight: bold;
+        font-family: "Roboto";
+        margin-top: 25px;
+        margin-bottom: 15px;
+      }
+      &list {
+        &Item {
+          display: flex;
+          align-items: center;
+          @media (max-width: 900px) {
+            text-align: center;
+            justify-content: center;
+            max-width: 100%;
+            width: 100%;
+          }
+          &__img {
+            width: 20px;
+          }
+          &__text {
+            margin-left: 10px;
+            font-size: 16px;
+            font-family: "Roboto";
+            color: #fff;
+          }
+        }
+      }
+      &__listTitle2 {
+        color: #52bedc;
+        font-size: 18px;
+        font-weight: bold;
+        font-family: "Roboto";
+        margin-top: 75px;
+        margin-bottom: 25px;
+      }
+      &Platforms {
+        width: 319px;
+        &Line {
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+          width: 100%;
+          &__img {
+          }
+          &:nth-child(2) {
+            margin-top: 50px;
+          }
+        }
+      }
+    }
+  }
 }
