--- a/src/app.module.scss
+++ b/src/app.module.scss
@@ -617,4 +617,66 @@
       }
     }
   }
+  .footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    &Top {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      max-width: 1280px;
+      width: 100%;
+      @media (max-width: 970px) {
+        flex-direction: column;
+      }
+      &Left {
+        margin: 13px 0;
+        @media (max-width: 501px) {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          justify-content: center;
+        }
+        &__img {
+          &:nth-child(2) {
+            margin-left: 32px;
+          }
+        }
+      }
+      &Right {
+        @media (max-width: 501px) {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          justify-content: center;
+          text-align: center;
+        }
+        &__link {
+          font-family: "Roboto";
+          font-size: 18px;
+          color: black;
+          &:nth-child(2) {
+            margin-left: 32px;
+          }
+        }
+        @media (max-width: 970px) {
+          margin-bottom: 10px;
+        }
+      }
+    }
+    &Bottom {
+      width: 100vw;
+      background-color: #000;
+      &__text {
+        text-align: center;
+        margin: 13px 0;
+        font-family: "Roboto";
+        font-size: 12px;
+        color: white;
+      }
+    }
+  }
 }
